fix: adjust padding and z-index for improved layout and stacking context

--- a/css/painting-css.css
+++ b/css/painting-css.css
@@ -30,7 +30,8 @@ body {
 .color-palette {
     display: flex;
     gap: 80px;
-    padding: 25px;
+    padding-top: 25px;
+    padding-bottom: 25px;
     width: 100vw;
     overflow-x: scroll;
     align-items: flex-start;
@@ -108,8 +109,11 @@ body {
 }
 
 .bottom-section {
-    position: fixed;
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 9999;
 }
 
 .see-my-thoughts {
@@ -159,12 +163,13 @@ a {
     width: 100vw;
     height: 75vw;
     position: absolute;
+    z-index: -10;
 }
 
 .coloring-zone img {
     width: 100vw;
     height: 75vw;
-    z-index: 9999;
+    z-index: 0;
     pointer-events: none;
     object-fit: contain;
     opacity: 0.75;
